--- a/index4.html
+++ b/index4.html
@@ -4,15 +4,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.min.css?_v=20230704215249"></link>
-  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230704215249"></script>
-  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230704215249"></script>
-  <script src="https://unpkg.com/@swup/preload-plugin@2?_v=20230704215249"></script>
-  <script src="files/script /tilt.js?_v=20230704215249"></script>
+  <link rel="stylesheet" href="css/style.min.css?_v=20230704235526"></link>
+  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230704235526"></script>
+  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230704235526"></script>
+  <script src="https://unpkg.com/@swup/preload-plugin@2?_v=20230704235526"></script>
+  <script src="files/script /tilt.js?_v=20230704235526"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230704215249" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css?_v=20230704215249" rel="stylesheet"
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230704235526" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css?_v=20230704235526" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <header>
@@ -61,8 +61,8 @@
 </div>
 
 </header>
-<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230704215249" />
-<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230704215249"></script> -->
+<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230704235526" />
+<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230704235526"></script> -->
 
 <body>
   <main id="swup" class="transition-fade">
@@ -145,7 +145,7 @@
         <div style="padding-bottom: 0px;" class="pg-1_bk_2 pg-1_bk_2_aston">
 
               <div class="container text_plus_2">
-                <div style="padding-bottom: 0px;" class="row">
+                <div style="padding-bottom: 0px;" class="row justify-content-center">
                 <div class="row justify-content-center">
                   <div class="col-8">
                     <picture><source srcset="img/Aston_post5.webp" type="image/webp"><img width="100%" src="img/Aston_post5.jpg" alt=""></picture>
@@ -168,113 +168,113 @@
                 </div>
                 <div style="padding-bottom: 0px;" class="row">
                   <div class="col-12">
-                    <picture><source srcset="img/Aston_post3.webp" type="image/webp"><img style="margin-bottom: 0px;" width="100%" src="img/Aston_post3.jpg" alt=""></picture>
+                    <picture><source srcset="img/Aston_post3.webp" type="image/webp"><img  style="margin-bottom: 0px; border-radius: 0px;" width="100%" src="img/Aston_post3.jpg" alt=""></picture>
                   </div>
                 </div>
               </div>
         </div>
-        <div class="pg-1_bk_3">
-          <div class="container">
-            <div class="row">
-              <div class="col text-center as_header" >
-                <h2>Main colors</h2>
-              </div>
-              <picture><source srcset="img/Aston_mac.webp" type="image/webp"><img class="bk_2_img" width="100%" src="img/Aston_mac.jpg" alt=""></picture>
+      </div>
+      <div class="pg-1_bk_3">
+        <div class="container">
+          <div class="row">
+            <div class="col text-center as_header" >
+              <h2>Main colors</h2>
+            </div>
+            <picture><source srcset="img/Aston_mac.webp" type="image/webp"><img class="bk_2_img" width="100%" src="img/Aston_mac.jpg" alt=""></picture>
 
-            <div class="col-4 black0000">
-              <h3>#000000</h3>
-            </div>
-            <div class="col-4 b202020 b20958B">
-              <h3>#20958B</h3>
-            </div>
-            <div class="col-4 b6c1d32 b1E7A51">
-              <h3>#1E7A51</h3>
-            </div>
-            </div>
+          <div class="col-4 black0000">
+            <h3>#000000</h3>
           </div>
+          <div class="col-4 b202020 b20958B">
+            <h3>#20958B</h3>
+          </div>
+          <div class="col-4 b6c1d32 b1E7A51">
+            <h3>#1E7A51</h3>
+          </div>
+          </div>
+        </div>
+        <div class="container">
+          <div class="row text_plus">
+            <div class="col-6">
+              <h3>- The Aston Martin website design showcases a host of advantages that elevate the user's browsing experience and
+              exemplify
+              the brand's elegance and performance. With a focus on user experience (UX) and user interface (UI) design, this
+              captivating website boasts a range of features that set it apart from the rest.</h3>
+            </div>
+            <div class="col-6">
+              <h3>- One of the standout advantages is the implementation of a dynamic menu, which seamlessly adapts to the user's needs.
+              This innovative feature ensures effortless navigation, allowing visitors to explore various sections of the website with
+              ease. Whether they are searching for specific models, discovering the latest innovations, or exploring the rich heritage
+              of Aston Martin, the dynamic menu intuitively presents the most relevant options, resulting in a seamless browsing
+              experience.</h3>
+            </div>
+            <div class="col-6">
+              <h3>- Moreover, the UX/UI design of the Aston Martin website is meticulously crafted to offer a visually stunning and
+              engaging
+              interface. The user interface combines sleek aesthetics with intuitive functionality, enabling visitors to interact
+              effortlessly with the content. Through a harmonious blend of striking visuals, well-organized layouts, and carefully
+              chosen typography, the design creates a sophisticated and immersive experience that reflects the brand's prestigious
+              image.</h3>
+            </div>
+            <div class="col-6">
+              <h3>- Additionally, the Aston Martin website design places emphasis on optimal usability, ensuring that every visitor can
+              access desired information efficiently. From clear and concise call-to-action buttons to thoughtfully placed menus and
+              filters, every element is strategically positioned to guide users through their journey on the website. This
+              user-centric approach guarantees a seamless interaction, enabling visitors to effortlessly find the information they
+              seek and engage with Aston Martin's exceptional products and services.</h3>
+            </div>
+            <h3>- In summary, the Aston Martin website design stands out by incorporating a dynamic menu that intuitively adapts to the
+            user's needs, a visually stunning UX/UI design that exudes elegance, and an emphasis on optimal usability. These
+            advantages collectively create an immersive and effortless browsing experience, allowing visitors to delve into the
+            world of Aston Martin and discover the epitome of automotive luxury and performance..</h3>
+          </div>
+        </div>
+      </div>
+      <div class="pg-1_bk_41">
+        <div class="main_next_mob">
           <div class="container">
-            <div class="row text_plus">
-              <div class="col-6">
-                <h3>- The Aston Martin website design showcases a host of advantages that elevate the user's browsing experience and
-                exemplify
-                the brand's elegance and performance. With a focus on user experience (UX) and user interface (UI) design, this
-                captivating website boasts a range of features that set it apart from the rest.</h3>
+            <div class="row justify-content-center w-2">
+              <div class="col-10 position-relative">
+                <h3 class="text-center">Next Project</h3>
+                <picture><source srcset="img/Landing_Memoj.webp" type="image/webp"><img class="mobile_pic" src="img/Landing_Memoj.jpg" alt=""></picture>
+                <div class="row row_info_main">
+                  <div class="col-6">
+                    <h2>MEMOJI</h2>
+                  </div>
+                  <div class="col-4">
+                    <a href="index5.html">
+                      <svg width="40%" height="40%" viewBox="0 0 30 16" fill="none"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <path
+                          d="M29.7071 8.7071C30.0976 8.31658 30.0976 7.68341 29.7071 7.29289L23.3431 0.92893C22.9526 0.538405 22.3195 0.538405 21.9289 0.92893C21.5384 1.31945 21.5384 1.95262 21.9289 2.34314L27.5858 8L21.9289 13.6569C21.5384 14.0474 21.5384 14.6805 21.9289 15.0711C22.3195 15.4616 22.9526 15.4616 23.3431 15.0711L29.7071 8.7071ZM1.11539e-07 9L29 9L29 7L-1.11539e-07 7L1.11539e-07 9Z"
+                          fill="white" />
+                      </svg>
+                    </a>
+                  </div>
+                </div>
               </div>
-              <div class="col-6">
-                <h3>- One of the standout advantages is the implementation of a dynamic menu, which seamlessly adapts to the user's needs.
-                This innovative feature ensures effortless navigation, allowing visitors to explore various sections of the website with
-                ease. Whether they are searching for specific models, discovering the latest innovations, or exploring the rich heritage
-                of Aston Martin, the dynamic menu intuitively presents the most relevant options, resulting in a seamless browsing
-                experience.</h3>
+              <div class="back_blur">
+                <div class="position-relative">
+                  <span class="blur_obj blur_obj_aston"></span>
+                </div>
               </div>
-              <div class="col-6">
-                <h3>- Moreover, the UX/UI design of the Aston Martin website is meticulously crafted to offer a visually stunning and
-                engaging
-                interface. The user interface combines sleek aesthetics with intuitive functionality, enabling visitors to interact
-                effortlessly with the content. Through a harmonious blend of striking visuals, well-organized layouts, and carefully
-                chosen typography, the design creates a sophisticated and immersive experience that reflects the brand's prestigious
-                image.</h3>
-              </div>
-              <div class="col-6">
-                <h3>- Additionally, the Aston Martin website design places emphasis on optimal usability, ensuring that every visitor can
-                access desired information efficiently. From clear and concise call-to-action buttons to thoughtfully placed menus and
-                filters, every element is strategically positioned to guide users through their journey on the website. This
-                user-centric approach guarantees a seamless interaction, enabling visitors to effortlessly find the information they
-                seek and engage with Aston Martin's exceptional products and services.</h3>
-              </div>
-              <h3>- In summary, the Aston Martin website design stands out by incorporating a dynamic menu that intuitively adapts to the
-              user's needs, a visually stunning UX/UI design that exudes elegance, and an emphasis on optimal usability. These
-              advantages collectively create an immersive and effortless browsing experience, allowing visitors to delve into the
-              world of Aston Martin and discover the epitome of automotive luxury and performance..</h3>
             </div>
           </div>
         </div>
-        <div class="pg-1_bk_41">
-          <div class="main_next_mob">
-            <div class="container">
-              <div class="row justify-content-center w-2">
-                <div class="col-10 position-relative">
-                  <h3 class="text-center">Next Project</h3>
-                  <picture><source srcset="img/Landing_Memoj.webp" type="image/webp"><img class="mobile_pic" src="img/Landing_Memoj.jpg" alt=""></picture>
-                  <div class="row row_info_main">
-                    <div class="col-6">
-                      <h2>MEMOJI</h2>
-                    </div>
-                    <div class="col-4">
-                      <a href="index5.html">
-                        <svg width="40%" height="40%" viewBox="0 0 30 16" fill="none"
-                          xmlns="http://www.w3.org/2000/svg">
-                          <path
-                            d="M29.7071 8.7071C30.0976 8.31658 30.0976 7.68341 29.7071 7.29289L23.3431 0.92893C22.9526 0.538405 22.3195 0.538405 21.9289 0.92893C21.5384 1.31945 21.5384 1.95262 21.9289 2.34314L27.5858 8L21.9289 13.6569C21.5384 14.0474 21.5384 14.6805 21.9289 15.0711C22.3195 15.4616 22.9526 15.4616 23.3431 15.0711L29.7071 8.7071ZM1.11539e-07 9L29 9L29 7L-1.11539e-07 7L1.11539e-07 9Z"
-                            fill="white" />
-                        </svg>
-                      </a>
-                    </div>
-                  </div>
-                </div>
-                <div class="back_blur">
-                  <div class="position-relative">
-                    <span class="blur_obj blur_obj_aston"></span>
-                  </div>
-                </div>
+        <div class="main_next">
+
+          <div class="last_scroll_box" data-scroll data-scroll-sticky data-scroll-target=".main_next">
+            <div class="last_box_info"></div>
+            <div class="next_text">
+              <p>Next Project</p>
+            </div>
+            <div class="percentage">0%</div>
+            <div class="progress_line_box">
+              <div class="progress_line">
               </div>
             </div>
-          </div>
-          <div class="main_next">
-
-            <div class="last_scroll_box" data-scroll data-scroll-sticky data-scroll-target=".main_next">
-              <div class="last_box_info"></div>
-              <div class="next_text">
-                <p>Next Project</p>
-              </div>
-              <div class="percentage">0%</div>
-              <div class="progress_line_box">
-                <div class="progress_line">
-                </div>
-              </div>
-              <div class="box_img scroll-image">
-                <picture><source srcset="img/Landing_Memoj.webp" type="image/webp"><img class="last_img " id="image" src="img/Landing_Memoj.jpg" alt=""></picture>
-              </div>
+            <div class="box_img scroll-image">
+              <picture><source srcset="img/Landing_Memoj.webp" type="image/webp"><img class="last_img " id="image" src="img/Landing_Memoj.jpg" alt=""></picture>
             </div>
           </div>
         </div>
@@ -289,8 +289,8 @@
 
 
 
-<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230704215249"></script>
-  <script src="https://cdn.blobity.dev/by.js?_v=20230704215249"></script> -->
+<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230704235526"></script>
+  <script src="https://cdn.blobity.dev/by.js?_v=20230704235526"></script> -->
 
 
 
@@ -301,15 +301,15 @@
 
 
 
-<script src="files/script /swup.js?_v=20230704215249"></script>
-<script src="files/script /locomotive.js?_v=20230704215249"></script>
-<script src="files/script /SwupProgressPlugin.min.js?_v=20230704215249"></script>
+<script src="files/script /swup.js?_v=20230704235526"></script>
+<script src="files/script /locomotive.js?_v=20230704235526"></script>
+<script src="files/script /SwupProgressPlugin.min.js?_v=20230704235526"></script>
 
-<script src="files/script /script.js?_v=20230704215249"></script>
+<script src="files/script /script.js?_v=20230704235526"></script>
 
 
 <footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js?_v=20230704215249"
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js?_v=20230704235526"
                 integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
                 crossorigin="anonymous"></script>
 </footer>
