--- a/index6.html
+++ b/index6.html
@@ -4,15 +4,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.min.css?_v=20230704215249"></link>
-  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230704215249"></script>
-  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230704215249"></script>
-  <script src="https://unpkg.com/@swup/preload-plugin@2?_v=20230704215249"></script>
-  <script src="files/script /tilt.js?_v=20230704215249"></script>
+  <link rel="stylesheet" href="css/style.min.css?_v=20230704235526"></link>
+  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230704235526"></script>
+  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230704235526"></script>
+  <script src="https://unpkg.com/@swup/preload-plugin@2?_v=20230704235526"></script>
+  <script src="files/script /tilt.js?_v=20230704235526"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230704215249" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css?_v=20230704215249" rel="stylesheet"
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230704235526" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css?_v=20230704235526" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <header>
@@ -61,12 +61,12 @@
 </div>
 
 </header>
-<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230704215249" />
-<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230704215249"></script> -->
+<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230704235526" />
+<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230704235526"></script> -->
 
 <body>
   <main id="swup" class="transition-fade">
-    <div id="page" class="pagework page5" data-scroll-container>
+    <div id="page" class="pagework page6" data-scroll-container>
       <div class="rows_2" data-scroll-section>
         <div id="prew" class="Prew">
           <div class="container">
@@ -138,7 +138,7 @@
         <div style="padding-bottom: 0px;" class="pg-1_bk_2 pg-1_bk_2_org">
 
           <div class="container text_plus_2">
-            <div style="padding-bottom: 0px;" class="row">
+            <div style="padding-bottom: 0px;" class="row justify-content-center">
               <div class="row justify-content-center">
                 <div class="col-8">
                   <picture><source srcset="img/Orange_ver.webp" type="image/webp"><img width="100%" src="img/Orange_ver.jpg" alt=""></picture>
@@ -158,112 +158,112 @@
               </div>
               <div style="padding-bottom: 0px;" class="row">
                 <div class="col-12">
-                  <picture><source srcset="img/orange_macbook.webp" type="image/webp"><img style="margin-bottom: 0px;" width="100%" src="img/orange_macbook.png" alt=""></picture>
+                  <picture><source srcset="img/orange_macbook.webp" type="image/webp"><img style="margin-bottom: 0px; border-radius: 0px;" width="100%" src="img/orange_macbook.png" alt=""></picture>
                 </div>
               </div>
             </div>
           </div>
-          <div class="pg-1_bk_3">
-            <div class="container">
-              <div class="row">
-                <div class="col text-center as_header">
-                  <h2>Main colors</h2>
-                </div>
-                <picture><source srcset="img/orange_imac.webp" type="image/webp"><img class="bk_2_img" width="100%" src="img/orange_imac.jpg" alt=""></picture>
+        </div>
+        <div class="pg-1_bk_3">
+          <div class="container">
+            <div class="row">
+              <div class="col text-center as_header">
+                <h2>Main colors</h2>
+              </div>
+              <picture><source srcset="img/orange_imac.webp" type="image/webp"><img class="bk_2_img" width="100%" src="img/orange_imac.jpg" alt=""></picture>
 
-  
-              <div class="col-4 bwhite">
-                <h3>#white</h3>
+
+            <div class="col-4 bwhite">
+              <h3>#white</h3>
+            </div>
+            <div class="col-4 b202020 bFF6700">
+              <h3>#FF6700</h3>
+            </div>
+            <div class="col-4 b6c1d32 b75CCEB">
+              <h3>#75CCEB</h3>
+            </div>
+            </div>
+          </div>
+          <div class="container">
+            <div class="row text_plus">
+              <div class="col-6">
+                <h3>- Welcome to minimalist Landing Page design! With its simple and sleek layout, our page provides a
+                  seamless
+                  browsing
+                  experience. Featuring a user-friendly interface, you can effortlessly explore our product offerings
+                  and place orders
+                  with just a few clicks.</h3>
               </div>
-              <div class="col-4 b202020 bFF6700">
-                <h3>#FF6700</h3>
+              <div class="col-6">
+                <h3>- Our streamlined design focuses on presenting key information in a concise manner, ensuring that
+                  you can quickly
+                  find the
+                  items you desire. Selecting and ordering products is a breeze, allowing you to complete your
+                  purchase in no time.
+                </h3>
               </div>
-              <div class="col-4 b6c1d32 b75CCEB">
-                <h3>#75CCEB</h3>
+              <div class="col-6">
+                <h3>- To showcase the satisfaction of our customers, we have included a dedicated testimonial section.
+                  This column
+                  displays
+                  genuine reviews from our happy customers, providing you with valuable insights about our products
+                  and services.</h3>
               </div>
+              <div class="col-6">
+                <h3>- Adding a touch of fun and personality, we have incorporated interesting and expressive emojis
+                  throughout the
+                  page. These
+                  delightful visuals not only bring a smile to your face but also enhance the overall user experience.
+                </h3>
               </div>
             </div>
+          </div>
+        </div>
+        <div class="pg-1_bk_41">
+          <div class="main_next_mob">
             <div class="container">
-              <div class="row text_plus">
-                <div class="col-6">
-                  <h3>- Welcome to minimalist Landing Page design! With its simple and sleek layout, our page provides a
-                    seamless
-                    browsing
-                    experience. Featuring a user-friendly interface, you can effortlessly explore our product offerings
-                    and place orders
-                    with just a few clicks.</h3>
+              <div class="row justify-content-center w-2">
+                <div class="col-10 position-relative">
+                  <h3 class="text-center">Next Project</h3>
+                  <picture><source srcset="img/Model_main.webp" type="image/webp"><img class="mobile_pic" src="img/Model_main.jpg" alt=""></picture>
+                  <div class="row row_info_main">
+                    <div class="col-6">
+                      <h2>MODEL</h2>
+                    </div>
+                    <div class="col-4">
+                      <a href="index7.html">
+                        <svg width="40%" height="40%" viewBox="0 0 30 16" fill="none"
+                          xmlns="http://www.w3.org/2000/svg">
+                          <path
+                            d="M29.7071 8.7071C30.0976 8.31658 30.0976 7.68341 29.7071 7.29289L23.3431 0.92893C22.9526 0.538405 22.3195 0.538405 21.9289 0.92893C21.5384 1.31945 21.5384 1.95262 21.9289 2.34314L27.5858 8L21.9289 13.6569C21.5384 14.0474 21.5384 14.6805 21.9289 15.0711C22.3195 15.4616 22.9526 15.4616 23.3431 15.0711L29.7071 8.7071ZM1.11539e-07 9L29 9L29 7L-1.11539e-07 7L1.11539e-07 9Z"
+                            fill="white" />
+                        </svg>
+                      </a>
+                    </div>
+                  </div>
                 </div>
-                <div class="col-6">
-                  <h3>- Our streamlined design focuses on presenting key information in a concise manner, ensuring that
-                    you can quickly
-                    find the
-                    items you desire. Selecting and ordering products is a breeze, allowing you to complete your
-                    purchase in no time.
-                  </h3>
-                </div>
-                <div class="col-6">
-                  <h3>- To showcase the satisfaction of our customers, we have included a dedicated testimonial section.
-                    This column
-                    displays
-                    genuine reviews from our happy customers, providing you with valuable insights about our products
-                    and services.</h3>
-                </div>
-                <div class="col-6">
-                  <h3>- Adding a touch of fun and personality, we have incorporated interesting and expressive emojis
-                    throughout the
-                    page. These
-                    delightful visuals not only bring a smile to your face but also enhance the overall user experience.
-                  </h3>
+                <div class="back_blur">
+                  <div class="position-relative">
+                    <span class="blur_obj blur_obj_model"></span>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
-          <div class="pg-1_bk_41">
-            <div class="main_next_mob">
-              <div class="container">
-                <div class="row justify-content-center w-2">
-                  <div class="col-10 position-relative">
-                    <h3 class="text-center">Next Project</h3>
-                    <picture><source srcset="img/Model_main.webp" type="image/webp"><img class="mobile_pic" src="img/Model_main.jpg" alt=""></picture>
-                    <div class="row row_info_main">
-                      <div class="col-6">
-                        <h2>MODEL</h2>
-                      </div>
-                      <div class="col-4">
-                        <a href="index7.html">
-                          <svg width="40%" height="40%" viewBox="0 0 30 16" fill="none"
-                            xmlns="http://www.w3.org/2000/svg">
-                            <path
-                              d="M29.7071 8.7071C30.0976 8.31658 30.0976 7.68341 29.7071 7.29289L23.3431 0.92893C22.9526 0.538405 22.3195 0.538405 21.9289 0.92893C21.5384 1.31945 21.5384 1.95262 21.9289 2.34314L27.5858 8L21.9289 13.6569C21.5384 14.0474 21.5384 14.6805 21.9289 15.0711C22.3195 15.4616 22.9526 15.4616 23.3431 15.0711L29.7071 8.7071ZM1.11539e-07 9L29 9L29 7L-1.11539e-07 7L1.11539e-07 9Z"
-                              fill="white" />
-                          </svg>
-                        </a>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="back_blur">
-                    <div class="position-relative">
-                      <span class="blur_obj blur_obj_aston"></span>
-                    </div>
-                  </div>
+          <div class="main_next">
+
+            <div class="last_scroll_box" data-scroll data-scroll-sticky data-scroll-target=".main_next">
+              <div class="last_box_info"></div>
+              <div class="next_text">
+                <p>Next Project</p>
+              </div>
+              <div class="percentage">0%</div>
+              <div class="progress_line_box">
+                <div class="progress_line">
                 </div>
               </div>
-            </div>
-            <div class="main_next">
-
-              <div class="last_scroll_box" data-scroll data-scroll-sticky data-scroll-target=".main_next">
-                <div class="last_box_info"></div>
-                <div class="next_text">
-                  <p>Next Project</p>
-                </div>
-                <div class="percentage">0%</div>
-                <div class="progress_line_box">
-                  <div class="progress_line">
-                  </div>
-                </div>
-                <div class="box_img scroll-image">
-                  <picture><source srcset="img/Model_main.webp" type="image/webp"><img class="last_img " id="image" src="img/Model_main.jpg" alt=""></picture>
-                </div>
+              <div class="box_img scroll-image">
+                <picture><source srcset="img/Model_main.webp" type="image/webp"><img class="last_img " id="image" src="img/Model_main.jpg" alt=""></picture>
               </div>
             </div>
           </div>
@@ -278,8 +278,8 @@
 
 
 
-<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230704215249"></script>
-  <script src="https://cdn.blobity.dev/by.js?_v=20230704215249"></script> -->
+<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230704235526"></script>
+  <script src="https://cdn.blobity.dev/by.js?_v=20230704235526"></script> -->
 
 
 
@@ -290,15 +290,15 @@
 
 
 
-<script src="files/script /swup.js?_v=20230704215249"></script>
-<script src="files/script /locomotive.js?_v=20230704215249"></script>
-<script src="files/script /SwupProgressPlugin.min.js?_v=20230704215249"></script>
+<script src="files/script /swup.js?_v=20230704235526"></script>
+<script src="files/script /locomotive.js?_v=20230704235526"></script>
+<script src="files/script /SwupProgressPlugin.min.js?_v=20230704235526"></script>
 
-<script src="files/script /script.js?_v=20230704215249"></script>
+<script src="files/script /script.js?_v=20230704235526"></script>
 
 
 <footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js?_v=20230704215249"
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js?_v=20230704235526"
                 integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
                 crossorigin="anonymous"></script>
 </footer>
