--- a/index9.html
+++ b/index9.html
@@ -4,15 +4,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.min.css?_v=20230705012036"></link>
-  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230705012036"></script>
-  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230705012036"></script>
-  <script src="https://unpkg.com/@swup/preload-plugin@2?_v=20230705012036"></script>
-  <script src="files/script /tilt.js?_v=20230705012036"></script>
+  <link rel="stylesheet" href="css/style.min.css?_v=20230705052050"></link>
+  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230705052050"></script>
+  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230705052050"></script>
+  <script src="https://unpkg.com/@swup/preload-plugin@2?_v=20230705052050"></script>
+  <script src="files/script /tilt.js?_v=20230705052050"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230705012036" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css?_v=20230705012036" rel="stylesheet"
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230705052050" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css?_v=20230705052050" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <header>
@@ -27,6 +27,7 @@
 		<li class="woks1"><a class="woks" href="index9.html"></a></li>
 		<li class="woks1"><a class="woks" href="index10.html"></a></li>
 		<li class="woks1"><a class="woks" href="index11.html"></a></li>
+		<li class="woks1"><a class="woks" href="index12.html"></a></li>
 		<li><a href="index.html">About</a></li>
 	</nav>
 <div id="preloader">
@@ -61,8 +62,8 @@
 </div>
 
 </header>
-<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230705012036" />
-<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230705012036"></script> -->
+<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230705052050" />
+<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230705052050"></script> -->
 
 <body>
   <main id="swup" class="transition-fade">
@@ -277,7 +278,7 @@
               </div>
               <div style="padding-bottom: 0px;" class="row">
                 <div class="col-12">
-                  <img style="margin-bottom: 0px; border-radius: 0px;" width="100%" src="img/senator_macbook.png"
+                  <img style="margin-bottom: 0px; border-radius: 0px;" width="100%" src="img/fybrid_macbook.png"
                     alt="">
                 </div>
               </div>
@@ -290,7 +291,7 @@
               <div class="col text-center as_header">
                 <h2>Main colors</h2>
               </div>
-              <picture><source srcset="img/senator_imac.webp" type="image/webp"><img class="bk_2_img" width="100%" src="img/senator_imac.jpg" alt=""></picture>
+              <picture><source srcset="img/fybrid_imac.webp" type="image/webp"><img class="bk_2_img" width="100%" src="img/fybrid_imac.jpg" alt=""></picture>
 
 
               <div class="col-4 white0000">
@@ -340,9 +341,14 @@
           </div>
         </div>
         <div class="container">
-          <div style="padding-bottom: 0px;" class="row">
-            <picture><source srcset="img/senator_mobile.webp" type="image/webp"><img width="100%" src="img/senator_mobile.jpg" alt=""></picture>
+          <div style="padding-bottom: 0px; margin: 30px 0px;" class="row">
+            <picture><source srcset="img/fybrid_ipad.webp" type="image/webp"><img width="100%" src="img/fybrid_ipad.jpg" alt=""></picture>
           </div>
+        <div class="container">
+          <div style="padding-bottom: 0px;" class="row">
+            <picture><source srcset="img/fybrid_mobile.webp" type="image/webp"><img width="100%" src="img/fybrid_mobile.jpg" alt=""></picture>
+          </div>
+        </div>
         </div>
         <div class="pg-1_bk_41">
           <div class="main_next_mob">
@@ -350,10 +356,10 @@
               <div class="row justify-content-center w-2">
                 <div class="col-10 position-relative">
                   <h3 class="text-center">Next Project</h3>
-                  <picture><source srcset="img/Fs_home.webp" type="image/webp"><img class="mobile_pic" src="img/Fs_home.jpg" alt=""></picture>
+                  <picture><source srcset="img/rialust_main.webp" type="image/webp"><img class="mobile_pic" src="img/rialust_main.jpg" alt=""></picture>
                   <div class="row row_info_main">
                     <div class="col-6">
-                      <h2>FYBRID</h2>
+                      <h2>RIAL UST</h2>
                     </div>
                     <div class="col-4">
                       <a href="index7.html">
@@ -369,7 +375,7 @@
                 </div>
                 <div class="back_blur">
                   <div class="position-relative">
-                    <span class="blur_obj blur_obj_senator"></span>
+                    <span class="blur_obj blur_obj_rial"></span>
                   </div>
                 </div>
               </div>
@@ -388,7 +394,7 @@
                 </div>
               </div>
               <div class="box_img scroll-image">
-                <picture><source srcset="img/Fs_home.webp" type="image/webp"><img class="last_img " id="image" src="img/Fs_home.jpg" alt=""></picture>
+                <picture><source srcset="img/rialust_main.webp" type="image/webp"><img class="last_img " id="image" src="img/rialust_main.jpg" alt=""></picture>
               </div>
             </div>
           </div>
@@ -403,8 +409,8 @@
 
 
 
-<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230705012036"></script>
-  <script src="https://cdn.blobity.dev/by.js?_v=20230705012036"></script> -->
+<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230705052050"></script>
+  <script src="https://cdn.blobity.dev/by.js?_v=20230705052050"></script> -->
 
 
 
@@ -415,15 +421,15 @@
 
 
 
-<script src="files/script /swup.js?_v=20230705012036"></script>
-<script src="files/script /locomotive.js?_v=20230705012036"></script>
-<script src="files/script /SwupProgressPlugin.min.js?_v=20230705012036"></script>
+<script src="files/script /swup.js?_v=20230705052050"></script>
+<script src="files/script /locomotive.js?_v=20230705052050"></script>
+<script src="files/script /SwupProgressPlugin.min.js?_v=20230705052050"></script>
 
-<script src="files/script /script.js?_v=20230705012036"></script>
+<script src="files/script /script.js?_v=20230705052050"></script>
 
 
 <footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js?_v=20230705012036"
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js?_v=20230705052050"
                 integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
                 crossorigin="anonymous"></script>
 </footer>
