--- a/index8.html
+++ b/index8.html
@@ -4,15 +4,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.min.css?_v=20230705105923"></link>
-  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230705105923"></script>
-  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230705105923"></script>
-  <script src="https://unpkg.com/@swup/preload-plugin@2?_v=20230705105923"></script>
-  <script src="files/script /tilt.js?_v=20230705105923"></script>
+  <link rel="stylesheet" href="css/style.min.css?_v=20230705142502"></link>
+  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230705142502"></script>
+  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230705142502"></script>
+  <script src="https://unpkg.com/@swup/preload-plugin@2?_v=20230705142502"></script>
+  <script src="files/script /tilt.js?_v=20230705142502"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230705105923" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css?_v=20230705105923" rel="stylesheet"
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230705142502" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css?_v=20230705142502" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <header>
@@ -31,6 +31,8 @@
 		<li><a href="index.html">About</a></li>
 	</nav>
 <div id="preloader">
+	<h2 class="GC">Getting close!</h2>
+	<h2 class="done">Done!</h2>
 	<div class="progress-bar_box">
 		<div class="progresss-bar-main">
 			<div class="progresss"></div>
@@ -62,8 +64,8 @@
 </div>
 
 </header>
-<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230705105923" />
-<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230705105923"></script> -->
+<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230705142502" />
+<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230705142502"></script> -->
 
 <body>
   <main id="swup" class="transition-fade">
@@ -280,8 +282,8 @@
 
 
 
-<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230705105923"></script>
-  <script src="https://cdn.blobity.dev/by.js?_v=20230705105923"></script> -->
+<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230705142502"></script>
+  <script src="https://cdn.blobity.dev/by.js?_v=20230705142502"></script> -->
 
 
 
@@ -292,15 +294,15 @@
 
 
 
-<script src="files/script /swup.js?_v=20230705105923"></script>
-<script src="files/script /locomotive.js?_v=20230705105923"></script>
-<script src="files/script /SwupProgressPlugin.min.js?_v=20230705105923"></script>
+<script src="files/script /swup.js?_v=20230705142502"></script>
+<script src="files/script /locomotive.js?_v=20230705142502"></script>
+<script src="files/script /SwupProgressPlugin.min.js?_v=20230705142502"></script>
 
-<script src="files/script /script.js?_v=20230705105923"></script>
+<script src="files/script /script.js?_v=20230705142502"></script>
 
 
 <footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js?_v=20230705105923"
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js?_v=20230705142502"
                 integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
                 crossorigin="anonymous"></script>
 </footer>
