--- a/index11.html
+++ b/index11.html
@@ -4,31 +4,22 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.min.css?_v=20230705175219"></link>
-  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230705175219"></script>
-  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230705175219"></script>
-  <script src="https://unpkg.com/@swup/preload-plugin@2?_v=20230705175219"></script>
-  <script src="files/script /tilt.js?_v=20230705175219"></script>
+  <link rel="stylesheet" href="css/style.min.css?_v=20230708002736"></link>
+  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230708002736"></script>
+  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230708002736"></script>
+  <script src="https://unpkg.com/@swup/preload-plugin@2?_v=20230708002736"></script>
+  <script src="files/script /tilt.js?_v=20230708002736"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230705175219" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css?_v=20230705175219" rel="stylesheet"
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230708002736" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css?_v=20230708002736" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <header>
-	<nav>
+	<nav class="Main_navbar">
 		<li><a data-swup-preload href="index2.html">Work</a></li>
-		<li class="woks1"><a class="woks" href="index3.html"></a></li>
-		<li class="woks1"><a class="woks" href="index4.html"></a></li>
-		<li class="woks1"><a class="woks" href="index5.html"></a></li>
-		<li class="woks1"><a class="woks" href="index6.html"></a></li>
-		<li class="woks1"><a class="woks" href="index7.html"></a></li>
-		<li class="woks1"><a class="woks" href="index8.html"></a></li>
-		<li class="woks1"><a class="woks" href="index9.html"></a></li>
-		<li class="woks1"><a class="woks" href="index10.html"></a></li>
-		<li class="woks1"><a class="woks" href="index11.html"></a></li>
-		<li class="woks1"><a class="woks" href="index12.html"></a></li>
 		<li><a href="index.html">About</a></li>
+		<div class="select_nav"></div>
 	</nav>
 	<div class="notify ny_1">
 		<h2>smooth scrolling is off</h2>
@@ -68,8 +59,8 @@
 </div>
 
 </header>
-<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230705175219" />
-<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230705175219"></script> -->
+<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230708002736" />
+<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230708002736"></script> -->
 
 <body>
   <main id="swup" class="transition-fade">
@@ -298,8 +289,8 @@
 
 
 
-<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230705175219"></script>
-  <script src="https://cdn.blobity.dev/by.js?_v=20230705175219"></script> -->
+<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230708002736"></script>
+  <script src="https://cdn.blobity.dev/by.js?_v=20230708002736"></script> -->
 
 
 
@@ -310,15 +301,15 @@
 
 
 
-<script src="files/script /swup.js?_v=20230705175219"></script>
-<script src="files/script /locomotive.js?_v=20230705175219"></script>
-<script src="files/script /SwupProgressPlugin.min.js?_v=20230705175219"></script>
+<script src="files/script /swup.js?_v=20230708002736"></script>
+<script src="files/script /locomotive.js?_v=20230708002736"></script>
+<script src="files/script /SwupProgressPlugin.min.js?_v=20230708002736"></script>
 
-<script src="files/script /script.js?_v=20230705175219"></script>
+<script src="files/script /script.js?_v=20230708002736"></script>
 
 
 <footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js?_v=20230705175219"
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js?_v=20230708002736"
                 integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
                 crossorigin="anonymous"></script>
 </footer>
