--- a/index2.html
+++ b/index2.html
@@ -4,15 +4,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.min.css?_v=20230708002736"></link>
-  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230708002736"></script>
-  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230708002736"></script>
-  <script src="https://unpkg.com/@swup/preload-plugin@2?_v=20230708002736"></script>
-  <script src="files/script /tilt.js?_v=20230708002736"></script>
+  <link rel="stylesheet" href="css/style.min.css?_v=20230709011752"></link>
+  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230709011752"></script>
+  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230709011752"></script>
+  <script src="https://unpkg.com/@swup/preload-plugin@2?_v=20230709011752"></script>
+  <script src="files/script /tilt.js?_v=20230709011752"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230708002736" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css?_v=20230708002736" rel="stylesheet"
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300&family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230709011752" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css?_v=20230709011752" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <header>
@@ -176,7 +176,7 @@
               <div class="row justify-content-center w-5">
                 <div class="col-10 position-relative">
                   <a href="index7.html">
-                    <picture><source srcset="img/Model_main.webp" type="image/webp"><img class="mobile_pic" src="img/Model_main.jpg" alt=""></picture>
+                    <picture><source srcset="img/model_post_5.webp" type="image/webp"><img class="mobile_pic" src="img/model_post_5.jpg" alt=""></picture>
                   </a>
                   <div class="row row_info_main">
                     <div class="col-6">
@@ -340,7 +340,7 @@
               <div class="gb_img gb_img_2" data-id="strip2" data-target="img_mainbox_2"><picture><source srcset="img/aston_martin_main.webp" type="image/webp"><img src="img/aston_martin_main.jpg" alt=""></picture></div>
               <div class="gb_img gb_img_3" data-id="strip3" data-target="img_mainbox_3"><picture><source srcset="img/Landing_Memoj.webp" type="image/webp"><img src="img/Landing_Memoj.jpg" alt=""></picture></div>
               <div class="gb_img gb_img_4" data-id="strip4" data-target="img_mainbox_4"><picture><source srcset="img/Landing_org.webp" type="image/webp"><img src="img/Landing_org.jpg" alt=""></picture></div>
-              <div class="gb_img gb_img_5" data-id="strip5" data-target="img_mainbox_5"><picture><source srcset="img/Model_main.webp" type="image/webp"><img src="img/Model_main.jpg" alt=""></picture></div>
+              <div class="gb_img gb_img_5" data-id="strip5" data-target="img_mainbox_5"><picture><source srcset="img/model_post_5.webp" type="image/webp"><img src="img/model_post_5.jpg" alt=""></picture></div>
               <div class="gb_img gb_img_6" data-id="strip6" data-target="img_mainbox_6"><picture><source srcset="img/senator_main.webp" type="image/webp"><img src="img/senator_main.jpg" alt=""></picture></div>
               <div class="gb_img gb_img_7" data-id="strip7" data-target="img_mainbox_7"><picture><source srcset="img/Fs_home.webp" type="image/webp"><img src="img/Fs_home.jpg" alt=""></picture></div>
               <div class="gb_img gb_img_8" data-id="strip8" data-target="img_mainbox_8"><picture><source srcset="img/rialust_main.webp" type="image/webp"><img src="img/rialust_main.jpg" alt=""></picture></div>
@@ -363,7 +363,7 @@
             </div>
             <div id="img_mainbox_4" data-id="strip4" class="scroll_imgbox"><picture><source srcset="img/Landing_org.webp" type="image/webp"><img id="img_main_4" class="scroll_imgbox_img" src="img/Landing_org.jpg" alt=""></picture>
             <a id="link_home" href="index6.html"></a></div>
-            <div id="img_mainbox_5" data-id="strip5" class="scroll_imgbox"><picture><source srcset="img/Model_main.webp" type="image/webp"><img id="img_main_5" class="scroll_imgbox_img" src="img/Model_main.jpg" alt=""></picture>
+            <div id="img_mainbox_5" data-id="strip5" class="scroll_imgbox"><picture><source srcset="img/model_post_5.webp" type="image/webp"><img id="img_main_5" class="scroll_imgbox_img" src="img/model_post_5.jpg" alt=""></picture>
             <a id="link_home" href="index7.html"></a></div>
             <div id="img_mainbox_6" data-id="strip6" class="scroll_imgbox"><picture><source srcset="img/senator_main.webp" type="image/webp"><img id="img_main_6" class="scroll_imgbox_img" src="img/senator_main.jpg" alt=""></picture>
             <a id="link_home" href="index8.html"></a></div>
@@ -385,6 +385,22 @@
 
 
 <div class="strip_main">
+  <div class="strip_bt strip strip1  strip2  strip3  strip4  strip5  strip6  strip7  strip8  strip9  strip10">
+    <div class="container">
+      <div class="row">
+        <div class="col-9">
+          <h2>Click</h2>
+        </div>
+        <div class="col-3">
+            <svg width="40%" height="40%" viewBox="0 0 30 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M29.7071 8.7071C30.0976 8.31658 30.0976 7.68341 29.7071 7.29289L23.3431 0.92893C22.9526 0.538405 22.3195 0.538405 21.9289 0.92893C21.5384 1.31945 21.5384 1.95262 21.9289 2.34314L27.5858 8L21.9289 13.6569C21.5384 14.0474 21.5384 14.6805 21.9289 15.0711C22.3195 15.4616 22.9526 15.4616 23.3431 15.0711L29.7071 8.7071ZM1.11539e-07 9L29 9L29 7L-1.11539e-07 7L1.11539e-07 9Z"
+                fill="white" />
+            </svg>
+        </div>
+      </div>
+    </div>
+  </div>
     <h2 id="ChangeText " class="strip strip1">
       FRIESA
     </h2>
@@ -443,7 +459,7 @@
           <div style="  transition-delay: 0.15s;" class="grid-item grid-item_2 move-up">
             <div class="grid-item_img">
             <div class="grid-item_img_fit">
-              <picture><source srcset="img/Model_main.webp" type="image/webp"><img src="img/Model_main.jpg" alt=""></picture></div>
+              <picture><source srcset="img/model_post_5.webp" type="image/webp"><img src="img/model_post_5.jpg" alt=""></picture></div>
             </div>
           </div>
           <div style="  transition-delay: 0.15s;" class="grid-item grid-item_2 move-up">
@@ -549,12 +565,12 @@
     </div>
   </main>
 </body>
-<script src="files/script /swup.js?_v=20230708002736"></script>
-<script src="files/script /locomotive.js?_v=20230708002736"></script>
-<script src="files/script /SwupProgressPlugin.min.js?_v=20230708002736"></script>
-<script src="files/script /script.js?_v=20230708002736" ></script>
+<script src="files/script /swup.js?_v=20230709011752"></script>
+<script src="files/script /locomotive.js?_v=20230709011752"></script>
+<script src="files/script /SwupProgressPlugin.min.js?_v=20230709011752"></script>
+<script src="files/script /script.js?_v=20230709011752" ></script>
 <footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js?_v=20230708002736"
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js?_v=20230709011752"
                 integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
                 crossorigin="anonymous"></script>
 </footer>
