--- a/index2.html
+++ b/index2.html
@@ -4,15 +4,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.min.css?_v=20230709011752"></link>
-  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230709011752"></script>
-  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230709011752"></script>
-  <script src="https://unpkg.com/@swup/preload-plugin@2?_v=20230709011752"></script>
-  <script src="files/script /tilt.js?_v=20230709011752"></script>
+  <link rel="stylesheet" href="css/style.min.css?_v=20230709125553"></link>
+  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230709125553"></script>
+  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230709125553"></script>
+  <script src="https://unpkg.com/@swup/preload-plugin@2?_v=20230709125553"></script>
+  <script src="files/script /tilt.js?_v=20230709125553"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300&family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230709011752" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css?_v=20230709011752" rel="stylesheet"
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300&family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230709125553" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css?_v=20230709125553" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <header>
@@ -353,28 +353,28 @@
             <div class="scroll-section gallery-item" data-id="1" data-scroll-section>
           <div class="scroll_gallery">
             <div id="img_mainbox_1" data-id="strip1" class="scroll_imgbox scroll_imgbox_one"><picture><source srcset="img/red_friesa.webp" type="image/webp"><img id="img_main_1" class="scroll_imgbox_img" src="img/red_friesa.jpg" alt=""></picture>
-                <a id="link_home" href="index3.html"></a>
+                <a class="link_home" href="index3.html"></a>
             </div>
             <div id="img_mainbox_2" data-id="strip2" class="scroll_imgbox"><picture><source srcset="img/aston_martin_main.webp" type="image/webp"><img id="img_main_2" class="scroll_imgbox_img" src="img/aston_martin_main.jpg" alt=""></picture>
-              <a id="link_home" href="index4.html"></a>
+              <a class="link_home" href="index4.html"></a>
             </div>
             <div id="img_mainbox_3" data-id="strip3" class="scroll_imgbox"><picture><source srcset="img/Landing_Memoj.webp" type="image/webp"><img id="img_main_3" class="scroll_imgbox_img" src="img/Landing_Memoj.jpg" alt=""></picture>
-              <a id="link_home" href="index5.html"></a>
+              <a class="link_home" href="index5.html"></a>
             </div>
             <div id="img_mainbox_4" data-id="strip4" class="scroll_imgbox"><picture><source srcset="img/Landing_org.webp" type="image/webp"><img id="img_main_4" class="scroll_imgbox_img" src="img/Landing_org.jpg" alt=""></picture>
-            <a id="link_home" href="index6.html"></a></div>
+            <a class="link_home" href="index6.html"></a></div>
             <div id="img_mainbox_5" data-id="strip5" class="scroll_imgbox"><picture><source srcset="img/model_post_5.webp" type="image/webp"><img id="img_main_5" class="scroll_imgbox_img" src="img/model_post_5.jpg" alt=""></picture>
-            <a id="link_home" href="index7.html"></a></div>
+            <a class="link_home" href="index7.html"></a></div>
             <div id="img_mainbox_6" data-id="strip6" class="scroll_imgbox"><picture><source srcset="img/senator_main.webp" type="image/webp"><img id="img_main_6" class="scroll_imgbox_img" src="img/senator_main.jpg" alt=""></picture>
-            <a id="link_home" href="index8.html"></a></div>
+            <a class="link_home" href="index8.html"></a></div>
             <div id="img_mainbox_7" data-id="strip7" class="scroll_imgbox"><picture><source srcset="img/Fs_home.webp" type="image/webp"><img id="img_main_7" class="scroll_imgbox_img" src="img/Fs_home.jpg" alt=""></picture>
-            <a id="link_home" href="index9.html"></a></div>
+            <a class="link_home" href="index9.html"></a></div>
             <div id="img_mainbox_8" data-id="strip8" class="scroll_imgbox"><picture><source srcset="img/rialust_main.webp" type="image/webp"><img id="img_main_8" class="scroll_imgbox_img" src="img/rialust_main.jpg" alt=""></picture>
-            <a id="link_home" href="index10.html"></a></div>
+            <a class="link_home" href="index10.html"></a></div>
             <div id="img_mainbox_9" data-id="strip9" class="scroll_imgbox"><picture><source srcset="img/ekfood_main.webp" type="image/webp"><img id="img_main_9" class="scroll_imgbox_img" src="img/ekfood_main.jpg" alt=""></picture>
-            <a id="link_home" href="index11.html"></a></div>
+            <a class="link_home" href="index11.html"></a></div>
             <div id="img_mainbox_10" data-id="strip10" class="scroll_imgbox"><picture><source srcset="img/dr.doogy.webp" type="image/webp"><img id="img_main_10" class="scroll_imgbox_img" src="img/dr.doogy.jpg" alt=""></picture>
-            <a id="link_home" href="index12.html"></a></div>
+            <a class="link_home" href="index12.html"></a></div>
           </div>
 
             
@@ -565,12 +565,12 @@
     </div>
   </main>
 </body>
-<script src="files/script /swup.js?_v=20230709011752"></script>
-<script src="files/script /locomotive.js?_v=20230709011752"></script>
-<script src="files/script /SwupProgressPlugin.min.js?_v=20230709011752"></script>
-<script src="files/script /script.js?_v=20230709011752" ></script>
+<script src="files/script /swup.js?_v=20230709125553"></script>
+<script src="files/script /locomotive.js?_v=20230709125553"></script>
+<script src="files/script /SwupProgressPlugin.min.js?_v=20230709125553"></script>
+<script src="files/script /script.js?_v=20230709125553" ></script>
 <footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js?_v=20230709011752"
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js?_v=20230709125553"
                 integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
                 crossorigin="anonymous"></script>
 </footer>
