--- a/index11.html
+++ b/index11.html
@@ -4,15 +4,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.min.css?_v=20230712203833"></link>
-  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230712203833"></script>
-  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230712203833"></script>
-  <script src="https://unpkg.com/@swup/preload-plugin@2?_v=20230712203833"></script>
-  <script src="files/script /tilt.js?_v=20230712203833"></script>
+  <link rel="stylesheet" href="css/style.min.css?_v=20230719152951"></link>
+  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230719152951"></script>
+  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230719152951"></script>
+  <script src="https://unpkg.com/@swup/preload-plugin@2?_v=20230719152951"></script>
+  <script src="files/script /tilt.js?_v=20230719152951"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300&family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230712203833" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css?_v=20230712203833" rel="stylesheet"
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300&family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230719152951" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css?_v=20230719152951" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
    
     <link rel="apple-touch-icon" sizes="57x57" href="files/favicon/apple-icon-57x57.png">
@@ -30,12 +30,11 @@
     <link rel="icon" type="image/png" sizes="16x16" href="files/favicon/favicon-16x16.png">
     <link rel="manifest" href="files/favicon/manifest.json">
     <meta name="msapplication-TileImage" content="files/favicon/ms-icon-144x144.png">
-    <title>Portfolio Alex</title>
 </head>
 <header>
 	<nav class="Main_navbar">
-		<li><a data-swup-preload href="index.html">Work</a></li>
-		<li><a href="index2.html">About</a></li>
+		<li><a data-swup-preload href="index2.html">Work</a></li>
+		<li><a href="index.html">About</a></li>
 		<div class="select_nav"></div>
 	</nav>
 	<div class="notify ny_1">
@@ -79,8 +78,8 @@
 </div>
 
 </header>
-<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230712203833" />
-<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230712203833"></script> -->
+<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230719152951" />
+<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230719152951"></script> -->
 
 <body>
   <main id="swup" class="transition-fade">
@@ -93,12 +92,24 @@
             <div class="row name_d">
               <div class="col-2 text-center mob_on3">
                 <h2>EKFOOD</h2>
-                <h2 class="mob_off" style="font-size: 1rem; font-weight: 300;">Business card site</h2>
+                <h2 class="mob_off" style="font-size: 1.1rem; font-weight: 300;">BISNESS SITE</h2>
               </div>
               <div class="col-6 align-items-center info_up_box">
-                <h3 style="font-size: 0.6rem;">Welcome to Ekfood, the ultimate online showcase for delicious and refreshing beverages. Website is designed to present a
-                wide range of Ekfood products, including our popular tans and ayran, along with comprehensive descriptions that will
-                tantalize taste buds.
+                <h3 style="font-size: 0.6rem;">"Senator Barbershop" is a great web project dedicated to the barbershop.
+                  With its sleek
+                  and user-friendly interface, this website aims to provide a seamless and convenient platform for
+                  booking
+                  barber services. Emphasizing the artistry and skill of its barbers, "Senator Barbershop" showcases an
+                  impressive
+                  gallery
+                  of their outstanding work, allowing visitors to appreciate their talent and attention to detail. The
+                  platform's
+                  intuitive booking system creates a hassle-free experience, enabling customers to easily schedule
+                  appointments and
+                  select
+                  their preferred services. Through its visually captivating design and impressive functionality,
+                  "Senator Barbershop"
+                  serves as a captivating showcase of the modern barbershop experience.
                 </h3>
               </div>
               <div class="col-2 mob_off">
@@ -125,9 +136,18 @@
             <h2>About</h2>
             <div class="col-4 mob_off"></div>
             <div class="col-4  mob_on justify-content-end align-items-center d-flex">
-              <p>Welcome to Ekfood, the ultimate online showcase for delicious and refreshing beverages. Website is designed to present a
-              wide range of Ekfood products, including our popular tans and ayran, along with comprehensive descriptions that will
-              tantalize taste buds.</p>
+              <p>"Senator Barbershop" is a great web project dedicated to the barbershop. With its sleek and
+                user-friendly interface,
+                this website aims to provide a seamless and convenient platform for booking
+                barber services. Emphasizing the artistry and skill of its barbers, "Senator Barbershop" showcases an
+                impressive gallery
+                of their outstanding work, allowing visitors to appreciate their talent and attention to detail. The
+                platform's
+                intuitive booking system creates a hassle-free experience, enabling customers to easily schedule
+                appointments and select
+                their preferred services. Through its visually captivating design and impressive functionality, "Senator
+                Barbershop"
+                serves as a captivating showcase of the modern barbershop experience.</p>
             </div>
             <div class="col-4 mob_off"></div>
 
@@ -138,21 +158,24 @@
           <div class="container text_plus_2">
             <div style="padding-bottom: 0px;" class="row justify-content-center">
               <div class="row justify-content-center">
-                <div class="col-8 col-ver">
+                <div class="col-8">
                   <picture><source srcset="img/ekfood_ver.webp" type="image/webp"><img id="img_back_EK_3" width="100%" src="img/ekfood_ver.jpg" alt=""></picture>
                 </div>
               </div>
               <div class="row justify-content-center">
-                <div class="col-8 col-ver">
+                <div class="col-8">
                   <picture><source srcset="img/ekfood_ver_2.webp" type="image/webp"><img id="img_back_EK_4" width="100%" src="img/ekfood_ver_2.jpg" alt=""></picture>
                 </div>
               </div>
               <div class="row justify-content-center">
                 <div class="col-2"></div>
                 <div style="color: #658382;   text-align: justify;" class="col-7">
-                  <h3> With a harmonious blend of green and white, website embodies freshness, vitality, and purity. The vibrant green hues
-                  evoke a sense of nature and health, reflecting the wholesome ingredients used in our products. The clean and pristine
-                  white color signifies the transparency and high quality of offerings.</h3>
+                  <h3> The Aston Martin website design showcases a host of advantages that elevate the user's browsing
+                    experience and
+                    exemplify
+                    the brand's elegance and performance. With a focus on user experience (UX) and user interface (UI)
+                    design, this
+                    captivating website boasts a range of features that set it apart from the rest.</h3>
                 </div>
                 <div class="col-2"></div>
               </div>
@@ -176,37 +199,44 @@
               <div class="col-4 white0000">
                 <h3>#white</h3>
               </div>
-              <div class="col-4 b202020 b9fca2f">
-                <h3>#9fca2f</h3>
+              <div style="background-color: #b4b4b4;" class="col-4 b202020 bFF6700">
+                <h3>#b4b4b4</h3>
               </div>
-              <div style="background-color: #101257;" class="col-4 b6c1d32 b75CCEB">
-                <h3>#101257</h3>
+              <div style="background-color: #000000;" class="col-4 b6c1d32 b75CCEB">
+                <h3>#000000</h3>
               </div>
             </div>
           </div>
           <div class="container">
             <div class="row text_plus">
               <div class="col-6">
-                <h3>- Project ‘Ekfood', believe in providing a seamless browsing experience. User-friendly interface allows you to
-                effortlessly navigate through our product catalog, effortlessly finding the items that pique your interest. Each product
-                page offers a comprehensive description, giving you an in-depth understanding of its unique characteristics and flavors.</h3>
+                <h3>- Welcome to minimalist Landing Page design! With its simple and sleek layout, our page provides a
+                  seamless
+                  browsing
+                  experience. Featuring a user-friendly interface, you can effortlessly explore our product offerings
+                  and place orders
+                  with just a few clicks.</h3>
               </div>
               <div class="col-6">
-                <h3>- Navigating the Ekfood website is effortless, thanks to its intuitive interface. The well-organized menu allows you to
-                easily locate your favorite products or discover new ones.
+                <h3>- Our streamlined design focuses on presenting key information in a concise manner, ensuring that
+                  you can quickly
+                  find the
+                  items you desire. Selecting and ordering products is a breeze, allowing you to complete your
+                  purchase in no time.
                 </h3>
               </div>
               <div class="col-6">
-                <h3>- Discover of Tan with three exciting recipes featured on the website. From the tangy and refreshing Tana-based Okroshka
-                to the delectable Tana-infused pancakes and succulent Tana-marinated shashlik, these recipes showcase the versatility of
-                Tana as a key ingredient. Step-by-step instructions and mouthwatering visuals guide you through the process, enabling
-                you to recreate these culinary masterpieces in the comfort of your own kitchen.
-              </h3>
+                <h3>- To showcase the satisfaction of our customers, we have included a dedicated testimonial section.
+                  This column
+                  displays
+                  genuine reviews from our happy customers, providing you with valuable insights about our products
+                  and services.</h3>
               </div>
               <div class="col-6">
-                <h3>- In addition to the tantalizing products and recipes, Ekfood ensures easy access to contact information and the company's
-                address. User-friendly interface provides clear and concise details, allowing you to effortlessly get in touch with us
-                or visit our physical location to experience the Ekfood charm firsthand.
+                <h3>- Adding a touch of fun and personality, we have incorporated interesting and expressive emojis
+                  throughout the
+                  page. These
+                  delightful visuals not only bring a smile to your face but also enhance the overall user experience.
                 </h3>
               </div>
             </div>
@@ -229,7 +259,7 @@
                     <picture><source srcset="img/dr.doogy.webp" type="image/webp"><img id="img_main_10" class="mobile_pic" src="img/dr.doogy.jpg" alt=""></picture>
                   </a>                  <div class="row row_info_main">
                     <div class="col-6">
-                      <h2>DRDOGGY</h2>
+                      <h2>EKFOOD</h2>
                     </div>
                     <div class="col-4">
                       <a href="index12.html">
@@ -245,7 +275,7 @@
                 </div>
                 <div class="back_blur">
                   <div class="position-relative">
-                    <span class="blur_obj blur_obj_drdoogy"></span>
+                    <span class="blur_obj ..blur_obj_drdoogy"></span>
                   </div>
                 </div>
               </div>
@@ -279,8 +309,8 @@
 
 
 
-<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230712203833"></script>
-  <script src="https://cdn.blobity.dev/by.js?_v=20230712203833"></script> -->
+<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230719152951"></script>
+  <script src="https://cdn.blobity.dev/by.js?_v=20230719152951"></script> -->
 
 
 
@@ -291,15 +321,15 @@
 
 
 
-<script src="files/script /swup.js?_v=20230712203833"></script>
-<script src="files/script /locomotive.js?_v=20230712203833"></script>
-<script src="files/script /SwupProgressPlugin.min.js?_v=20230712203833"></script>
+<script src="files/script /swup.js?_v=20230719152951"></script>
+<script src="files/script /locomotive.js?_v=20230719152951"></script>
+<script src="files/script /SwupProgressPlugin.min.js?_v=20230719152951"></script>
 
-<script src="files/script /script.js?_v=20230712203833"></script>
+<script src="files/script /script.js?_v=20230719152951"></script>
 
 
 <footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js?_v=20230712203833"
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js?_v=20230719152951"
                 integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
                 crossorigin="anonymous"></script>
 
