--- a/index8.html
+++ b/index8.html
@@ -4,15 +4,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.min.css?_v=20230712203833"></link>
-  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230712203833"></script>
-  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230712203833"></script>
-  <script src="https://unpkg.com/@swup/preload-plugin@2?_v=20230712203833"></script>
-  <script src="files/script /tilt.js?_v=20230712203833"></script>
+  <link rel="stylesheet" href="css/style.min.css?_v=20230719152951"></link>
+  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230719152951"></script>
+  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230719152951"></script>
+  <script src="https://unpkg.com/@swup/preload-plugin@2?_v=20230719152951"></script>
+  <script src="files/script /tilt.js?_v=20230719152951"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300&family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230712203833" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css?_v=20230712203833" rel="stylesheet"
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300&family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230719152951" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css?_v=20230719152951" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
    
     <link rel="apple-touch-icon" sizes="57x57" href="files/favicon/apple-icon-57x57.png">
@@ -30,12 +30,11 @@
     <link rel="icon" type="image/png" sizes="16x16" href="files/favicon/favicon-16x16.png">
     <link rel="manifest" href="files/favicon/manifest.json">
     <meta name="msapplication-TileImage" content="files/favicon/ms-icon-144x144.png">
-    <title>Portfolio Alex</title>
 </head>
 <header>
 	<nav class="Main_navbar">
-		<li><a data-swup-preload href="index.html">Work</a></li>
-		<li><a href="index2.html">About</a></li>
+		<li><a data-swup-preload href="index2.html">Work</a></li>
+		<li><a href="index.html">About</a></li>
 		<div class="select_nav"></div>
 	</nav>
 	<div class="notify ny_1">
@@ -79,8 +78,8 @@
 </div>
 
 </header>
-<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230712203833" />
-<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230712203833"></script> -->
+<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230719152951" />
+<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230719152951"></script> -->
 
 <body>
   <main id="swup" class="transition-fade">
@@ -154,16 +153,19 @@
           <div class="container text_plus_2">
             <div style="padding-bottom: 0px;" class="row justify-content-center">
               <div class="row justify-content-center">
-                <div class="col-8 col-ver">
+                <div class="col-8">
                   <picture><source srcset="img/senator_ver.webp" type="image/webp"><img id="img_back_SN_3" width="100%" src="img/senator_ver.jpg" alt=""></picture>
                 </div>
               </div>
               <div class="row justify-content-center">
                 <div class="col-2"></div>
                 <div style="color: #6a6a6a;   text-align: justify;" class="col-7">
-                  <h3> Embracing a sleek and modern design, "Senator Barbershop" showcases a minimalist Landing Page with a captivating black
-                  and white color scheme. The combination of these contrasting colors creates a visually striking and sophisticated
-                  atmosphere, reflecting the elegance and professionalism of the barbershop experience.</h3>
+                  <h3> The Aston Martin website design showcases a host of advantages that elevate the user's browsing
+                    experience and
+                    exemplify
+                    the brand's elegance and performance. With a focus on user experience (UX) and user interface (UI)
+                    design, this
+                    captivating website boasts a range of features that set it apart from the rest.</h3>
                 </div>
                 <div class="col-2"></div>
               </div>
@@ -296,8 +298,8 @@
 
 
 
-<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230712203833"></script>
-  <script src="https://cdn.blobity.dev/by.js?_v=20230712203833"></script> -->
+<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230719152951"></script>
+  <script src="https://cdn.blobity.dev/by.js?_v=20230719152951"></script> -->
 
 
 
@@ -308,15 +310,15 @@
 
 
 
-<script src="files/script /swup.js?_v=20230712203833"></script>
-<script src="files/script /locomotive.js?_v=20230712203833"></script>
-<script src="files/script /SwupProgressPlugin.min.js?_v=20230712203833"></script>
+<script src="files/script /swup.js?_v=20230719152951"></script>
+<script src="files/script /locomotive.js?_v=20230719152951"></script>
+<script src="files/script /SwupProgressPlugin.min.js?_v=20230719152951"></script>
 
-<script src="files/script /script.js?_v=20230712203833"></script>
+<script src="files/script /script.js?_v=20230719152951"></script>
 
 
 <footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js?_v=20230712203833"
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js?_v=20230719152951"
                 integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
                 crossorigin="anonymous"></script>
 
