--- a/index9.html
+++ b/index9.html
@@ -4,15 +4,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.min.css?_v=20230712203833"></link>
-  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230712203833"></script>
-  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230712203833"></script>
-  <script src="https://unpkg.com/@swup/preload-plugin@2?_v=20230712203833"></script>
-  <script src="files/script /tilt.js?_v=20230712203833"></script>
+  <link rel="stylesheet" href="css/style.min.css?_v=20230719152951"></link>
+  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230719152951"></script>
+  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230719152951"></script>
+  <script src="https://unpkg.com/@swup/preload-plugin@2?_v=20230719152951"></script>
+  <script src="files/script /tilt.js?_v=20230719152951"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300&family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230712203833" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css?_v=20230712203833" rel="stylesheet"
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300&family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230719152951" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css?_v=20230719152951" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
    
     <link rel="apple-touch-icon" sizes="57x57" href="files/favicon/apple-icon-57x57.png">
@@ -30,12 +30,11 @@
     <link rel="icon" type="image/png" sizes="16x16" href="files/favicon/favicon-16x16.png">
     <link rel="manifest" href="files/favicon/manifest.json">
     <meta name="msapplication-TileImage" content="files/favicon/ms-icon-144x144.png">
-    <title>Portfolio Alex</title>
 </head>
 <header>
 	<nav class="Main_navbar">
-		<li><a data-swup-preload href="index.html">Work</a></li>
-		<li><a href="index2.html">About</a></li>
+		<li><a data-swup-preload href="index2.html">Work</a></li>
+		<li><a href="index.html">About</a></li>
 		<div class="select_nav"></div>
 	</nav>
 	<div class="notify ny_1">
@@ -79,8 +78,8 @@
 </div>
 
 </header>
-<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230712203833" />
-<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230712203833"></script> -->
+<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230719152951" />
+<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230719152951"></script> -->
 
 <body>
   <main id="swup" class="transition-fade">
@@ -150,12 +149,21 @@
                 </svg>
               </div>
               <div class="col-7 align-items-center info_up_box">
-                <h3 style="font-size: 0.6rem; color: #909090;">"Fybrid Studio" is an innovative web project dedicated to website development, combining simplicity and elegance. With
-                its minimalist black and white design, this web studio creates a visually striking and user-friendly interface. Fybrid
-                Studio aims to provide a seamless and efficient platform for clients to order their custom websites. The intuitive
-                ordering system allows customers to easily select their desired services and provide specifications for their projects.
-                Through its sleek and concise design, Fybrid Studio showcases a modern and streamlined approach to web development,
-                making it a preferred choice for individuals and businesses seeking a sophisticated online presence.
+                <h3 style="font-size: 0.6rem;">"Senator Barbershop" is a great web project dedicated to the barbershop.
+                  With its sleek
+                  and user-friendly interface, this website aims to provide a seamless and convenient platform for
+                  booking
+                  barber services. Emphasizing the artistry and skill of its barbers, "Senator Barbershop" showcases an
+                  impressive
+                  gallery
+                  of their outstanding work, allowing visitors to appreciate their talent and attention to detail. The
+                  platform's
+                  intuitive booking system creates a hassle-free experience, enabling customers to easily schedule
+                  appointments and
+                  select
+                  their preferred services. Through its visually captivating design and impressive functionality,
+                  "Senator Barbershop"
+                  serves as a captivating showcase of the modern barbershop experience.
                 </h3>
               </div>
               <div class="col-2 mob_off">
@@ -246,20 +254,23 @@
             <h2>About</h2>
             <div class="col-4 mob_off"></div>
             <div class="col-4  mob_on justify-content-end align-items-center d-flex">
-              <p>"Fybrid Studio" is an innovative web project dedicated to website development, combining simplicity and elegance. With
-              its minimalist black and white design, this web studio creates a visually striking and user-friendly interface. Fybrid
-              Studio aims to provide a seamless and efficient platform for clients to order their custom websites. The intuitive
-              ordering system allows customers to easily select their desired services and provide specifications for their projects.
-              Through its sleek and concise design, Fybrid Studio showcases a modern and streamlined approach to web development,
-              making it a preferred choice for individuals and businesses seeking a sophisticated online presence.</p>
+              <p>"Senator Barbershop" is a great web project dedicated to the barbershop. With its sleek and
+                user-friendly interface,
+                this website aims to provide a seamless and convenient platform for booking
+                barber services. Emphasizing the artistry and skill of its barbers, "Senator Barbershop" showcases an
+                impressive gallery
+                of their outstanding work, allowing visitors to appreciate their talent and attention to detail. The
+                platform's
+                intuitive booking system creates a hassle-free experience, enabling customers to easily schedule
+                appointments and select
+                their preferred services. Through its visually captivating design and impressive functionality, "Senator
+                Barbershop"
+                serves as a captivating showcase of the modern barbershop experience.</p>
             </div>
             <div class="col-4 mob_off"></div>
 
           </div>
         </div>
-          <div style="padding-bottom: 0px;" class="row">
-            <picture><source srcset="img/fybrid_ipad.webp" type="image/webp"><img id="img_back_FS_5" width="100%" src="img/fybrid_ipad.jpg" alt=""></picture>
-          </div>
         <div style="padding-bottom: 0px;" class="pg-1_bk_2 pg-1_bk_2_sen">
 
           <div class="container text_plus_2">
@@ -267,9 +278,12 @@
               <div class="row justify-content-center">
                 <div class="col-2"></div>
                 <div style="color: #6a6a6a;   text-align: justify;" class="col-7">
-                  <h3> The combination of black and white colors brings a sense of elegance and sophistication to our website, reflecting the
-                  professionalism and creativity of "Fybrid Studio". The minimalist color scheme allows the focus to be on the showcased
-                  design work and services offered.</h3>
+                  <h3> The Aston Martin website design showcases a host of advantages that elevate the user's browsing
+                    experience and
+                    exemplify
+                    the brand's elegance and performance. With a focus on user experience (UX) and user interface (UI)
+                    design, this
+                    captivating website boasts a range of features that set it apart from the rest.</h3>
                 </div>
                 <div class="col-2"></div>
               </div>
@@ -305,31 +319,42 @@
           <div class="container">
             <div class="row text_plus">
               <div class="col-6">
-                <h3>- Welcome to Fybrid Studio, where simplicity meets excellence in web design! Project offers a minimalist and sleek
-                approach to website development, ensuring a seamless browsing experience. With our user-friendly interface, you can
-                effortlessly explore our portfolio and easily place orders for your desired websites.</h3>
+                <h3>- Welcome to minimalist Landing Page design! With its simple and sleek layout, our page provides a
+                  seamless
+                  browsing
+                  experience. Featuring a user-friendly interface, you can effortlessly explore our product offerings
+                  and place orders
+                  with just a few clicks.</h3>
               </div>
               <div class="col-6">
-                <h3>- Streamlined design philosophy focuses on presenting essential information in a concise and efficient manner, enabling
-                you to quickly find the perfect website solution for your needs. Ordering a custom website from Fybrid Studio is a
-                breeze, allowing you to complete your project requirements with ease and speed.
+                <h3>- Our streamlined design focuses on presenting key information in a concise manner, ensuring that
+                  you can quickly
+                  find the
+                  items you desire. Selecting and ordering products is a breeze, allowing you to complete your
+                  purchase in no time.
                 </h3>
               </div>
               <div class="col-6">
-                <h3>- Simplicity and Elegance: Black and white colors create a sophisticated and timeless aesthetic. The minimalistic approach
-                exudes a sense of professionalism and refinement, making it ideal for businesses and individuals seeking a sleek and
-                modern appearance.</h3>
+                <h3>- To showcase the satisfaction of our customers, we have included a dedicated testimonial section.
+                  This column
+                  displays
+                  genuine reviews from our happy customers, providing you with valuable insights about our products
+                  and services.</h3>
               </div>
               <div class="col-6">
-                <h3>- Focus on Content: By using a monochromatic palette, the focus shifts towards the content itself rather than being
-                overshadowed by elaborate color schemes. This allows the message, products, or services to take center stage, capturing
-                the attention of visitors and conveying information effectively.
+                <h3>- Adding a touch of fun and personality, we have incorporated interesting and expressive emojis
+                  throughout the
+                  page. These
+                  delightful visuals not only bring a smile to your face but also enhance the overall user experience.
                 </h3>
               </div>
             </div>
           </div>
         </div>
         <div class="container">
+          <div style="padding-bottom: 0px; margin: 30px 0px;" class="row">
+            <picture><source srcset="img/fybrid_ipad.webp" type="image/webp"><img id="img_back_FS_5" width="100%" src="img/fybrid_ipad.jpg" alt=""></picture>
+          </div>
         <div class="container">
           <div style="padding-bottom: 0px;" class="row">
             <picture><source srcset="img/fybrid_mobile.webp" type="image/webp"><img id="img_back_FS_6" width="100%" src="img/fybrid_mobile.jpg" alt=""></picture>
@@ -397,8 +422,8 @@
 
 
 
-<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230712203833"></script>
-  <script src="https://cdn.blobity.dev/by.js?_v=20230712203833"></script> -->
+<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230719152951"></script>
+  <script src="https://cdn.blobity.dev/by.js?_v=20230719152951"></script> -->
 
 
 
@@ -409,15 +434,15 @@
 
 
 
-<script src="files/script /swup.js?_v=20230712203833"></script>
-<script src="files/script /locomotive.js?_v=20230712203833"></script>
-<script src="files/script /SwupProgressPlugin.min.js?_v=20230712203833"></script>
+<script src="files/script /swup.js?_v=20230719152951"></script>
+<script src="files/script /locomotive.js?_v=20230719152951"></script>
+<script src="files/script /SwupProgressPlugin.min.js?_v=20230719152951"></script>
 
-<script src="files/script /script.js?_v=20230712203833"></script>
+<script src="files/script /script.js?_v=20230719152951"></script>
 
 
 <footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js?_v=20230712203833"
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js?_v=20230719152951"
                 integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
                 crossorigin="anonymous"></script>
 
