--- a/index4.html
+++ b/index4.html
@@ -191,6 +191,19 @@
           </div>
           <picture><source srcset="img/aston_post_6.webp" type="image/webp"><img id="img_back_AS_5" width="100%" src="img/aston_post_6.jpg" alt=""></picture>
         </div>
+        <div style="padding-bottom: 0px;" class="pg-1_bk_2 pg-1_bk_2_aston">
+          <div class="container text_plus_2">
+            <div style="padding-bottom: 0px;" class="row justify-content-center">
+              <div class="row justify-content-center">
+                <div class="col-2"></div>
+                <div style="color: #e1e1e1;    text-align: center;" class="col-7">
+                  <h2>Convenient choice of vehicle</h2>
+                </div>
+                <div class="col-2"></div>
+              </div>
+            </div>
+          </div>
+        </div>
       <div class="pg-1_bk_3">
         <div class="container">
           <div class="row">
